fixed problem cursor:pointer not working with z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,14 +64,15 @@ body>.container-fluid{
     background-size: cover;
     height: 1000px;
     min-width: 100%;
+    //position: relative;
     //z-index: -3;
-    position: relative;
     
 }
 
 .header .overlay {
     background: rgba(244,244,245,0.40);
     height: 1000px;
+    //position: relative;
     //z-index: -2;
 }
 
@@ -127,9 +128,10 @@ h1{
     margin-right: 15px;
     margin-left: 50px;
 }
-/*.images>img{
-    z-index: -1;
-}*/
+.header .images>img{
+    position: relative;
+    z-index: 0;
+}
 
 .feature1{
     
@@ -138,7 +140,7 @@ h1{
     padding-right: 225px;
     padding-top: 122px;
     padding-bottom: 1px;
-    position: absolute;
+    position: relative;
     z-index: 1;
     
 }
@@ -661,5 +663,9 @@ color: $controller;
 .subscribe .p-choose{
     margin-bottom: 85px;
 }
+/*.subscribe hr.hr{
+    margin: 0;
+    overflow: hidden;
+}*/
 
 // end subscribe section
